--- a/common/gtk-3.0/3.14/gtk-solid.css
+++ b/common/gtk-3.0/3.14/gtk-solid.css
@@ -1537,7 +1537,7 @@ column-header .button, column-header .button:hover, column-header .button:active
       border-top-width: 4px; }
     .scrollbar.slider:hover {
       background-color: #cfd1d4; }
-    .scrollbar.slider:prelight:active {
+    .scrollbar.slider:prelight:active, .scrollbar.slider:active {
       background-color: #5294E2; }
     .scrollbar.slider.fine-tune {
       border-width: 4px; }
