--- a/common/gtk-3.0/3.14/sass/_common.scss
+++ b/common/gtk-3.0/3.14/sass/_common.scss
@@ -1834,7 +1834,8 @@ $_scrollbar_bg_color: darken($base_color, 1%);
     &:hover {
       background-color: mix($fg_color, $bg_color, 25%);
     }
-    &:prelight:active {
+    &:prelight:active,
+    &:active {
       background-color: $selected_bg_color;
     }
     &.fine-tune {
