--- a/common/gtk-3.0/3.18/gtk-solid-dark.css
+++ b/common/gtk-3.0/3.18/gtk-solid-dark.css
@@ -1610,7 +1610,7 @@ column-header .button, column-header .button:hover, column-header .button:active
     background-color: #767b87; }
     .scrollbar .slider:hover {
       background-color: #676b78; }
-    .scrollbar .slider:prelight:active {
+    .scrollbar .slider:prelight:active, .scrollbar .slider:active {
       background-color: #5294E2; }
     .scrollbar .slider:insensitive {
       background-color: transparent; }
